Fix unused-private-field warning in FontCustomPlatformDataFreeType.cpp https://bugs.webkit.org/show_bug.cgi?id=140677

Reviewed by Martin Robinson.

* platform/graphics/cairo/FontCustomPlatformData.h:
* platform/graphics/freetype/FontCustomPlatformDataFreeType.cpp:
(WebCore::FontCustomPlatformData::FontCustomPlatformData):
(WebCore::FontCustomPlatformData::~FontCustomPlatformData):


Canonical link: https://commits.webkit.org/158646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178717 268f45cc-cd09-0410-ab3c-d52691b4dbfc